--- a/bjj.html
+++ b/bjj.html
@@ -176,7 +176,7 @@
     </script>
     <!-- End VWO Async SmartCode -->
 
-    <!-- Scheema Markup -->
+    <!-- Schema Markup -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
