--- a/kickboxing.html
+++ b/kickboxing.html
@@ -176,100 +176,127 @@
     </script>
     <!-- End VWO Async SmartCode -->
 
-    <!-- Schema Kickboxing FAQPage with Testimonials -->
+    <!-- Schema Markup for Kickboxing Class -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "FAQPage",
-        "mainEntity": [
+        "@graph": [
           {
-            "@type": "Question",
-            "name": "What is Kickboxing, and how is it different from other martial arts?",
-            "acceptedAnswer": {
-              "@type": "Answer",
-              "text": "Kickboxing is a striking-focused martial art combining powerful kicks, punches, and knee strikes into a dynamic system of offense and defense. Unlike grappling arts, kickboxing emphasizes stand-up techniques and delivers high-intensity workouts that improve strength, speed, and agility. Its unique blend of martial arts and fitness makes it ideal for both competitive sports and personal development."
-            }
+            "@type": "FAQPage",
+            "mainEntity": [
+              {
+                "@type": "Question",
+                "name": "What should I expect in my first Kickboxing class?",
+                "acceptedAnswer": {
+                  "@type": "Answer",
+                  "text": "In your first Kickboxing class, you'll learn the basics of punching, kicking, and footwork in a welcoming environment. Our classes are designed for all skill levels, so you'll be guided through each step at a pace that suits you."
+                }
+              },
+              {
+                "@type": "Question",
+                "name": "Is Kickboxing good for fitness?",
+                "acceptedAnswer": {
+                  "@type": "Answer",
+                  "text": "Yes! Kickboxing is an excellent full-body workout that improves cardiovascular health, builds strength, and increases flexibility. It’s a great way to stay fit while learning self-defense techniques."
+                }
+              },
+              {
+                "@type": "Question",
+                "name": "Do I need to have prior experience to join Kickboxing classes?",
+                "acceptedAnswer": {
+                  "@type": "Answer",
+                  "text": "No prior experience is required! Our Kickboxing classes are beginner-friendly and designed to gradually introduce you to new techniques, regardless of your fitness level."
+                }
+              },
+              {
+                "@type": "Question",
+                "name": "How does Kickboxing help with self-defense?",
+                "acceptedAnswer": {
+                  "@type": "Answer",
+                  "text": "Kickboxing teaches you effective striking techniques that are useful in self-defense situations. You'll learn how to use punches, kicks, and knee strikes to protect yourself."
+                }
+              },
+              {
+                "@type": "Question",
+                "name": "Can kids join Kickboxing classes?",
+                "acceptedAnswer": {
+                  "@type": "Answer",
+                  "text": "Yes! Our Kickboxing classes for kids and teens are specially designed to build confidence, discipline, and fitness in a fun and supportive environment. Classes are age-appropriate and teach essential skills in a safe setting."
+                }
+              }
+            ]
           },
           {
-            "@type": "Question",
-            "name": "Is Kickboxing suitable for beginners?",
-            "acceptedAnswer": {
-              "@type": "Answer",
-              "text": "Yes! Kickboxing is a versatile martial art suitable for all levels, including beginners. Classes at Golden Tiger Academy are designed to gradually introduce techniques, helping newcomers build confidence and skills at their own pace."
-            }
-          },
-          {
-            "@type": "Question",
-            "name": "What are the benefits of learning Kickboxing?",
-            "acceptedAnswer": {
-              "@type": "Answer",
-              "text": "Kickboxing provides a comprehensive workout that improves cardiovascular health, strength, and flexibility. It also enhances mental focus, discipline, and stress management while teaching effective self-defense techniques. The supportive environment of kickboxing classes fosters camaraderie, making it a holistic experience for physical and mental wellness."
-            }
-          },
-          {
-            "@type": "Question",
-            "name": "What should I expect in a Kickboxing class?",
-            "acceptedAnswer": {
-              "@type": "Answer",
-              "text": "Kickboxing classes typically start with a warm-up to prepare your body for training. You’ll practice fundamental techniques such as punches, kicks, and combinations through pad work, shadowboxing, or partner drills. Classes may include sparring for advanced participants and end with a cool-down or conditioning exercises."
-            }
-          },
-          {
-            "@type": "Question",
-            "name": "Is Kickboxing effective for self-defense?",
-            "acceptedAnswer": {
-              "@type": "Answer",
-              "text": "Yes! Kickboxing equips you with practical skills for defending yourself in real-world situations. The striking techniques, combined with improved reflexes and situational awareness, make it an effective martial art for personal safety."
-            }
-          },
-          {
-            "@type": "Question",
-            "name": "Can children and teens learn Kickboxing?",
-            "acceptedAnswer": {
-              "@type": "Answer",
-              "text": "Absolutely! Our Wednesday kickboxing classes are specifically designed for kids and teens. With exciting games and activities, these sessions are not only fun but also help young participants develop discipline, confidence, and essential life skills under the guidance of Ken Byrne, a 3rd-degree black belt."
-            }
-          }
-        ],
-        "review": [
-          {
-            "@type": "Review",
-            "author": {
-              "@type": "Person",
-              "name": "Edie"
+            "@type": "LocalBusiness",
+            "name": "Golden Tiger Academy - Kickboxing Classes",
+            "telephone": "+353-123-4567",
+            "priceRange": "€",
+            "image": "https://goldentigeracademy.com/apple-touch-icon.png",
+            "address": {
+              "@type": "PostalAddress",
+              "streetAddress": "Unit 10, Dunboyne Business Park",
+              "addressLocality": "Dunboyne",
+              "addressRegion": "Meath",
+              "postalCode": "A86 WR26",
+              "addressCountry": "IE"
             },
-            "reviewRating": {
-              "@type": "Rating",
+            "aggregateRating": {
+              "@type": "AggregateRating",
               "ratingValue": "5",
-              "bestRating": "5"
+              "reviewCount": "3"
             },
-            "reviewBody": "Been in Kickboxing for ten years, earned my black belt, and made great friends. Ken is a fantastic, supportive instructor. This club has boosted my confidence and self-defense skills. Highly recommend!"
+            "review": [
+              {
+                "@type": "Review",
+                "author": {
+                  "@type": "Person",
+                  "name": "Edie"
+                },
+                "reviewRating": {
+                  "@type": "Rating",
+                  "ratingValue": "5"
+                },
+                "reviewBody": "Been training Kickboxing for ten years, earned my black belt, and made great friends. Ken is a fantastic instructor, and this club has boosted my confidence. Highly recommend!"
+              },
+              {
+                "@type": "Review",
+                "author": {
+                  "@type": "Person",
+                  "name": "Sara"
+                },
+                "reviewRating": {
+                  "@type": "Rating",
+                  "ratingValue": "5"
+                },
+                "reviewBody": "Amazing Kickboxing class! The instructors are top-notch, and I’ve improved both my fitness and self-defense skills."
+              },
+              {
+                "@type": "Review",
+                "author": {
+                  "@type": "Person",
+                  "name": "Hugh"
+                },
+                "reviewRating": {
+                  "@type": "Rating",
+                  "ratingValue": "5"
+                },
+                "reviewBody": "The Kickboxing classes are fantastic, especially for beginners. The atmosphere is very welcoming and supportive."
+              }
+            ]
           },
           {
-            "@type": "Review",
-            "author": {
-              "@type": "Person",
-              "name": "Sara"
-            },
-            "reviewRating": {
-              "@type": "Rating",
-              "ratingValue": "5",
-              "bestRating": "5"
-            },
-            "reviewBody": "An amazing kickboxing class with great instructors. I've been training here for 7 years now. Highly recommend for improving fitness and learning self-defense."
-          },
-          {
-            "@type": "Review",
-            "author": {
-              "@type": "Person",
-              "name": "Hugh"
-            },
-            "reviewRating": {
-              "@type": "Rating",
-              "ratingValue": "5",
-              "bestRating": "5"
-            },
-            "reviewBody": "Great place to train with welcoming staff, the kickboxing classes are great for kids and teenagers."
+            "@type": "Organization",
+            "name": "Golden Tiger Academy",
+            "url": "https://goldentigeracademy.com/",
+            "logo": "https://goldentigeracademy.com/apple-touch-icon.png",
+            "address": {
+              "@type": "PostalAddress",
+              "streetAddress": "Dunboyne, Co. Meath",
+              "addressLocality": "Dunboyne",
+              "addressRegion": "Meath",
+              "postalCode": "A86 WR26",
+              "addressCountry": "IE"
+            }
           }
         ]
       }
