--- a/korean-kickboxing.html
+++ b/korean-kickboxing.html
@@ -176,100 +176,135 @@
     </script>
     <!-- End VWO Async SmartCode -->
 
-    <!-- Schema Korean Kickboxing FAQPage with Testimonials -->
+    <!-- Schema Markup -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "FAQPage",
-        "mainEntity": [
+        "@graph": [
           {
-            "@type": "Question",
-            "name": "What is Korean Kickboxing?",
-            "acceptedAnswer": {
-              "@type": "Answer",
-              "text": "Korean Kickboxing is a versatile martial art blending influences from Won Hwa Do, Taekwondo, and traditional kickboxing. It emphasizes fast, precise kicks and strategic footwork, making it an effective discipline for both self-defense and competitive sparring."
-            }
+            "@type": "FAQPage",
+            "mainEntity": [
+              {
+                "@type": "Question",
+                "name": "What should I expect in my first Korean Kickboxing class?",
+                "acceptedAnswer": {
+                  "@type": "Answer",
+                  "text": "In your first class, you'll focus on basic kicks, footwork, and techniques, with no sparring required. It's a fun and beginner-friendly environment where you can learn at your own pace. No prior experience or special uniform is required—just wear comfortable gym clothes."
+                }
+              },
+              {
+                "@type": "Question",
+                "name": "Is Korean Kickboxing suitable for beginners?",
+                "acceptedAnswer": {
+                  "@type": "Answer",
+                  "text": "Yes! Korean Kickboxing is ideal for beginners. Classes at Golden Tiger Academy emphasize building foundational skills, fitness, and confidence in a supportive environment."
+                }
+              },
+              {
+                "@type": "Question",
+                "name": "What are the benefits of learning Korean Kickboxing?",
+                "acceptedAnswer": {
+                  "@type": "Answer",
+                  "text": "Korean Kickboxing improves strength, cardiovascular fitness, flexibility, and coordination. It also builds mental resilience, focus, and discipline while teaching practical self-defense techniques that are applicable in real-life situations."
+                }
+              },
+              {
+                "@type": "Question",
+                "name": "Are the classes suitable for kids?",
+                "acceptedAnswer": {
+                  "@type": "Answer",
+                  "text": "Yes! Golden Tiger Academy offers Korean Kickboxing classes for kids, focusing on fun, fitness, and skill-building. Children develop confidence, discipline, and self-defense skills through structured drills and games."
+                }
+              },
+              {
+                "@type": "Question",
+                "name": "How does Korean Kickboxing improve self-defense skills?",
+                "acceptedAnswer": {
+                  "@type": "Answer",
+                  "text": "Korean Kickboxing equips you with techniques to control and neutralize opponents, emphasizing precision, speed, and fluid movement. It offers effective self-defense strategies, regardless of your opponent's size or strength."
+                }
+              },
+              {
+                "@type": "Question",
+                "name": "Is Korean Kickboxing suitable for women?",
+                "acceptedAnswer": {
+                  "@type": "Answer",
+                  "text": "Yes, Korean Kickboxing is excellent for women. It teaches quick, precise strikes and techniques that don’t rely on strength, making it an ideal self-defense system. Our classes provide a safe, supportive environment for everyone."
+                }
+              }
+            ]
           },
           {
-            "@type": "Question",
-            "name": "What makes Korean Kickboxing unique?",
-            "acceptedAnswer": {
-              "@type": "Answer",
-              "text": "The unique blend of martial arts influences gives Korean Kickboxing its distinctive focus on dynamic kicks, fluid movements, and practical techniques. It combines the power of kickboxing with the agility of Taekwondo and the adaptability of Won Hwa Do."
-            }
-          },
-          {
-            "@type": "Question",
-            "name": "Is Korean Kickboxing suitable for beginners?",
-            "acceptedAnswer": {
-              "@type": "Answer",
-              "text": "Yes! Korean Kickboxing is ideal for beginners, as classes at Golden Tiger Academy focus on building foundational skills, physical fitness, and confidence in a supportive environment."
-            }
-          },
-          {
-            "@type": "Question",
-            "name": "What are the benefits of learning Korean Kickboxing?",
-            "acceptedAnswer": {
-              "@type": "Answer",
-              "text": "Korean Kickboxing improves strength, cardiovascular fitness, flexibility, and coordination. It also builds mental resilience, focus, and discipline while teaching practical self-defense techniques that are applicable in real-life situations."
-            }
-          },
-          {
-            "@type": "Question",
-            "name": "What should I expect in a Korean Kickboxing class?",
-            "acceptedAnswer": {
-              "@type": "Answer",
-              "text": "Classes include warm-ups, drills focusing on kicks and footwork, and sparring practice for more experienced students. The sessions are designed to be engaging and challenging, catering to all experience levels."
-            }
-          },
-          {
-            "@type": "Question",
-            "name": "Are the classes suitable for kids?",
-            "acceptedAnswer": {
-              "@type": "Answer",
-              "text": "Yes! Golden Tiger Academy offers Korean Kickboxing classes for kids, focusing on fun, fitness, and skill-building. Through warm-ups, techniques, and sparring, children develop confidence, discipline, and self-defense skills."
-            }
-          }
-        ],
-        "review": [
-          {
-            "@type": "Review",
-            "author": {
-              "@type": "Person",
-              "name": "Niamh"
+            "@type": "LocalBusiness",
+            "name": "Golden Tiger Academy - Korean Kickboxing Classes",
+            "telephone": "+353-123-4567",
+            "priceRange": "€",
+            "image": "https://goldentigeracademy.com/apple-touch-icon.png",
+            "address": {
+              "@type": "PostalAddress",
+              "streetAddress": "Unit 10, Dunboyne Business Park",
+              "addressLocality": "Dunboyne",
+              "addressRegion": "Meath",
+              "postalCode": "A86 WR26",
+              "addressCountry": "IE"
             },
-            "reviewRating": {
-              "@type": "Rating",
+            "aggregateRating": {
+              "@type": "AggregateRating",
               "ratingValue": "5",
-              "bestRating": "5"
+              "reviewCount": "3"
             },
-            "reviewBody": "My kids love the Korean kickboxing classes. The instructors are fantastic and the classes are fun. It's a great way for them to stay active."
+            "review": [
+              {
+                "@type": "Review",
+                "author": {
+                  "@type": "Person",
+                  "name": "Niamh"
+                },
+                "reviewRating": {
+                  "@type": "Rating",
+                  "ratingValue": "5"
+                },
+                "reviewBody": "My kids love the Korean Kickboxing classes. The instructors are fantastic and the classes are fun. It's a great way for them to stay active."
+              },
+              {
+                "@type": "Review",
+                "author": {
+                  "@type": "Person",
+                  "name": "Tom"
+                },
+                "reviewRating": {
+                  "@type": "Rating",
+                  "ratingValue": "5"
+                },
+                "reviewBody": "Such a great experience for kids! The classes are both challenging and fun, and my child has really improved their confidence."
+              },
+              {
+                "@type": "Review",
+                "author": {
+                  "@type": "Person",
+                  "name": "Mark"
+                },
+                "reviewRating": {
+                  "@type": "Rating",
+                  "ratingValue": "5"
+                },
+                "reviewBody": "They play lots of games and my child has made great friends. It’s a fantastic way to keep them active and engaged!"
+              }
+            ]
           },
           {
-            "@type": "Review",
-            "author": {
-              "@type": "Person",
-              "name": "Tom"
-            },
-            "reviewRating": {
-              "@type": "Rating",
-              "ratingValue": "5",
-              "bestRating": "5"
-            },
-            "reviewBody": "Such a great experience for kids! The classes are both challenging and fun, and my child has really improved their confidence."
-          },
-          {
-            "@type": "Review",
-            "author": {
-              "@type": "Person",
-              "name": "Mark"
-            },
-            "reviewRating": {
-              "@type": "Rating",
-              "ratingValue": "5",
-              "bestRating": "5"
-            },
-            "reviewBody": "They play lots of games and my child has made great friends. It’s a fantastic way to keep them active and engaged!"
+            "@type": "Organization",
+            "name": "Golden Tiger Academy",
+            "url": "https://goldentigeracademy.com/",
+            "logo": "https://goldentigeracademy.com/apple-touch-icon.png",
+            "address": {
+              "@type": "PostalAddress",
+              "streetAddress": "Unit 10, Dunboyne Business Park",
+              "addressLocality": "Dunboyne",
+              "addressRegion": "Meath",
+              "postalCode": "A86 WR26",
+              "addressCountry": "IE"
+            }
           }
         ]
       }
