--- a/index.html
+++ b/index.html
@@ -484,19 +484,19 @@
     <div class="hero-section-outer">
       <section class="hero-section-inner">
         <div class="hero-text-container">
-          <h1 id="hero-header">Begin Your Martial Arts Journey at Golden Tiger Academy.</h1>
+          <h1 id="hero-header">Martial Arts Classes at Golden Tiger Academy</h1>
           <p id="hero-subheader">Martial arts classes for all ages and levels, no experience required. Start your martial arts journey today with BJJ Brazilian Jiu-Jitsu, Kenpo Karate, Muay Thai, Kickboxing and more in Dunboyne, County Meath. Boost your fitness, learn self-defense, and unleash your potential. Get in touch to arrange a free trial class.</p>
           <div class="cta-container">
             <div class="cta-wrap draw-border">
               <a href="./contact-us" class="cta cta-1-contact-us"> <i class="fa fa-envelope"></i> Contact Us</a>
             </div>
-            <div class="cta-wrap draw-border draw-border-black">
+            <!-- <div class="cta-wrap draw-border draw-border-black">
               <a href="tel:0872333481" class="cta cta-2-call-us"> <i class="fa fa-solid fa-phone fa-flip-horizontal"></i> Call Us Now</a>
-            </div>
+            </div> -->
           </div>
         </div>
-        <img class="hero-image-container" src="./images/hero-img.webp" width="584" height="auto" alt="Black belt throwing a white belt with a sumi gaeshi" />
-        <!-- <img class="hero-image-container" src="./images/golden-tiger-academy-logo.webp" width="584" height="auto" alt="Golden  Tiger Academy Logo" /> -->
+        <!-- <img class="hero-image-container" src="./images/hero-img.webp" width="584" height="auto" alt="Black belt throwing a white belt with a sumi gaeshi" /> -->
+        <img class="hero-image-container" src="./images/golden-tiger-academy-logo.webp" width="584" height="auto" alt="Golden  Tiger Academy Logo" />
       </section>
       <div class="shape-divider-bottom">
         <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
