--- a/index.html
+++ b/index.html
@@ -891,13 +891,13 @@
         </tr>
         <tr>
           <td class="class" data-cell="class">
-            BJJ NoGi
+            BJJ NoGi (age 16+)
             <span class="time" data-cell="time">7:00pm - 8:00pm</span>
           </td>
         </tr>
         <tr>
           <td class="class" data-cell="class">
-            Muay Thai
+            Muay Thai (age 15+)
             <span class="time" data-cell="time">8:00pm - 9:00pm</span>
           </td>
         </tr>
@@ -922,7 +922,7 @@
         </tr>
         <tr>
           <td class="class" data-cell="class">
-            BJJ NoGi
+            BJJ NoGi (age 16+)
             <div class="time" data-cell="time">8:00pm - 9:00pm</div>
           </td>
         </tr>
@@ -951,7 +951,7 @@
         </tr>
         <tr>
           <td class="class" data-cell="class">
-            Kenpo Karate
+            Kenpo Karate (age 16+)
             <div class="time" data-cell="time">8:00pm - 9:00pm</div>
           </td>
         </tr>
@@ -967,13 +967,13 @@
         </tr>
         <tr>
           <td class="class" data-cell="class">
-            BJJ Gi
+            BJJ Gi (age 16+)
             <div class="time" data-cell="time">7:00pm - 8:00pm</div>
           </td>
         </tr>
         <tr>
           <td class="class" data-cell="class">
-            Muay Thai
+            Muay Thai (age 15+)
             <div class="time" data-cell="time">8:00pm - 9:00pm</div>
           </td>
         </tr>
@@ -1002,13 +1002,13 @@
         </tr>
         <tr>
           <td class="class" data-cell="class">
-            Kenpo Karate
+            Kenpo Karate  (age 16+)
             <div class="time" data-cell="time">11:30am - 1:00pm</div>
           </td>
         </tr>
         <tr>
           <td class="class" data-cell="class">
-            Open Mat
+            Open Mat (age 16+)
             <div class="time" data-cell="time">1:00pm - 2:00pm</div>
           </td>
         </tr>
