Updating redirect links on blog

--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
           <p id="hero-subheader">Martial arts classes for all ages and levels, no experience required. Start your martial arts journey today with BJJ Brazilian Jiu-Jitsu, Kenpo Karate, Muay Thai, Kickboxing and more in Dunboyne, County Meath. Boost your fitness, learn self-defense, and unleash your potential. Get in touch to arrange a free trial class.</p>
           <div class="cta-container">
             <div class="cta-wrap draw-border">
-              <a href="./contact-us" class="cta cta-1-contact-us"> <i class="fa fa-envelope"></i> Contact Us</a>
+              <a href="./contact-us" class="cta cta-1-contact-us"> <i class="fa fa-envelope"></i> Book your free class</a>
             </div>
             <!-- <div class="cta-wrap draw-border draw-border-black">
               <a href="tel:0872333481" class="cta cta-2-call-us"> <i class="fa fa-solid fa-phone fa-flip-horizontal"></i> Call Us Now</a>
