--- a/index.html
+++ b/index.html
@@ -1089,9 +1089,9 @@
         <p>Ready to jump in and join us? Get started by contacting us to set up your free trial class</p>
         <div class="cta-container">
           <div class="cta-wrap draw-border">
-            <a href="./contact-us" class="cta cta-1-contact-us"> <i class="fa fa-envelope"></i> Contact Us</a>
+            <a href="./contact-us" class="cta cta-1-contact-us"> <i class="fa fa-envelope"></i> Book your free class</a>
           </div>
-          <div class="cta-wrap draw-border draw-border-white">
+          <div class="cta-wrap draw-border draw-border">
             <a href="tel:0872333481" class="cta cta-2-call-us"> <i class="fa fa-solid fa-phone fa-flip-horizontal"></i> Call Us Now</a>
           </div>
         </div>
