--- a/korean-kickboxing.html
+++ b/korean-kickboxing.html
@@ -552,7 +552,7 @@
           <div class="cta-wrap draw-border">
             <a href="./contact-us" class="cta cta-1-contact-us"> <i class="fa fa-envelope"></i> Contact Us</a>
           </div>
-          <div class="cta-wrap draw-border draw-border-white">
+          <div class="cta-wrap draw-border draw-border">
             <a href="tel:0872333481" class="cta cta-2-call-us"> <i class="fa fa-solid fa-phone fa-flip-horizontal"></i> Call Us Now</a>
           </div>
         </div>
