--- a/index.html
+++ b/index.html
@@ -730,7 +730,7 @@
         <button class="time-table-button" id="kickboxing">Kickboxing</button>
         <button class="time-table-button" id="korean-kickboxing">Korean Kickboxing</button>
         <button class="time-table-button" id="karate">Kenpo Karate</button>
-        <button class="time-table-button" id="open-mat">Open Mat</button>
+        <!-- <button class="time-table-button" id="open-mat">Open Mat</button> -->
       </div>
       <table class="timetable-section-container-inner">
         <tr>
@@ -752,7 +752,7 @@
           </td>
           <!-- Tuesday Row 1 -->
           <td class="class bjj" data-cell="class">
-            BJJ Gi <br />
+            BJJ  <br />
             (age 5-11)
             <div class="time" data-cell="time">6:00pm - 6:45pm</div>
           </td>
@@ -782,13 +782,13 @@
           <!-- Monday Row 2 -->
 
           <td class="class bjj" data-cell="class">
-            BJJ NoGi <br />
+            BJJ  <br />
             (age 16+)
             <div class="time" data-cell="time">7:00pm - 8:00pm</div>
           </td>
           <!-- Tuesday Row 2 -->
           <td class="class bjj" data-cell="class">
-            BJJ Gi <br />
+            BJJ  <br />
             (age 12-15)
             <div class="time" data-cell="time">7:00pm - 8:00pm</div>
           </td>
@@ -799,7 +799,7 @@
           </td>
           <!-- Thursday Row 2 -->
           <td class="class bjj" data-cell="class">
-            BJJ Gi <br />
+            BJJ  <br />
             (age 16+)
             <div class="time" data-cell="time">7:00pm - 8:00pm</div>
           </td>
@@ -823,7 +823,7 @@
 
           <!-- Tuesday Row 3 -->
           <td class="class bjj" data-cell="class">
-            BJJ NoGi <br />
+            BJJ  <br />
             (age 16+)
             <div class="time" data-cell="time">8:00pm - 9:00pm</div>
           </td>
@@ -868,8 +868,8 @@
           <!-- Friday Row 4 -->
           <td class="class closed" data-cell="class">Closed</td>
           <!-- Saturday Row 4 -->
-          <td class="class open-mat" data-cell="class">
-            Open Mat <br />
+          <td class="class bjj" data-cell="class">
+            BJJ <br />
             (age 16+)
             <div class="time" data-cell="time">1:00pm - 2:00pm</div>
           </td>
@@ -891,7 +891,7 @@
         </tr>
         <tr>
           <td class="class" data-cell="class">
-            BJJ NoGi (age 16+)
+            BJJ (age 16+)
             <span class="time" data-cell="time">7:00pm - 8:00pm</span>
           </td>
         </tr>
@@ -916,13 +916,13 @@
         </tr>
         <tr>
           <td class="class" data-cell="class">
-            BJJ Gi (age 12-15)
+            BJJ  (age 12-15)
             <div class="time" data-cell="time">7:00pm - 8:00pm</div>
           </td>
         </tr>
         <tr>
           <td class="class" data-cell="class">
-            BJJ NoGi (age 16+)
+            BJJ (age 16+)
             <div class="time" data-cell="time">8:00pm - 9:00pm</div>
           </td>
         </tr>
@@ -967,7 +967,7 @@
         </tr>
         <tr>
           <td class="class" data-cell="class">
-            BJJ Gi (age 16+)
+            BJJ  (age 16+)
             <div class="time" data-cell="time">7:00pm - 8:00pm</div>
           </td>
         </tr>
@@ -1008,7 +1008,7 @@
         </tr>
         <tr>
           <td class="class" data-cell="class">
-            Open Mat (age 16+)
+            BJJ (age 16+)
             <div class="time" data-cell="time">1:00pm - 2:00pm</div>
           </td>
         </tr>
