--- a/bjj.html
+++ b/bjj.html
@@ -384,7 +384,7 @@
             <p>Start your BJJ journey with our fundamentals class every Monday. Perfect for newcomers, this session covers all the fundamental moves and principles of Brazilian Jiu-Jitsu. No prior martial arts experience is required, and there's no sparring involved. Plus, it's a no-gi class, so there's no need for a BJJ GI (uniform).</p>
           </div>
           <div class="class-format">
-            <h2>BJJPrinciples & Rolling</h2>
+            <h2>BJJ Principles & Rolling</h2>
             <p>On Thursdays, we offer another class suitable for beginners and beyond. This session focuses on BJJ Principles, where techniques and fundamental principles are taught. The class concludes with light rolling sessions, providing new students with the opportunity to gain comfort and experience in rolling. This is a GI class.</p>
           </div>
           <div class="class-format">
@@ -399,8 +399,23 @@
       </div>
       <div class="shape-divider-bottom">
         <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-          <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="theme-color-3"></path>
+          <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="theme-color-4"></path>
         </svg>
+      </div>
+    </section>
+
+    <!-- Section - Our Black Belts -->
+    <section class="our-black-belts-container-outer">
+      <h4 class="first-class">Our Black Belts</h4>
+
+      <div class="our-black-belts-container-inner">
+        <div class="our-black-belts-container-inner-text">
+          <p>At Golden Tiger Academy, we proudly feature three Brazilian Jiu-Jitsu black belts guiding our students. Our head instructor, Ken Byrne, has mentored Adam and Ian throughout their entire martial arts journey, leading them from white to black belt. Collectively, Adam and Ian have dedicated over 27 years to BJJ training under Ken's guidance.</p>
+
+          <p>Their black belt promotions were conducted by distinguished practitioners: Gary Savage, a 3rd degree BJJ black belt, head coach at Savage MMA, and Blackpool's highest-ranking BJJ black belt with over 20 years of experience; and Alan Scott, a 1st degree BJJ black belt and accomplished martial artist. This journey from novice to expert within our own dojo exemplifies the dedication and high standards we uphold at Golden Tiger Academy.</p>
+        </div>
+
+        <img src="./images/page-bjj-03-3.webp" alt="Adam and Ian receiving their black belts from Gary Savage 3rd degree BJJ black belt" />
       </div>
     </section>
 
