--- a/bjj.html
+++ b/bjj.html
@@ -389,7 +389,7 @@
           </div>
           <div class="class-format">
             <h2>BJJ Advanced Sparring Class</h2>
-            <p>On Tuesdays, we have an advanced sparring class. This No-Gi sparring session is exclusively for students who have achieved at least a two-stripe white belt in BJJ.</p>
+            <p>On Tuesdays, we have an advanced sparring class. This sparring session is exclusively for students who have achieved at least a two-stripe white belt in BJJ.</p>
           </div>
           <div class="class-format">
             <h2>Kids / Teens BJJ Classes</h2>
