--- a/index.html
+++ b/index.html
@@ -1143,9 +1143,9 @@
       </div>
     </footer>
 
-
-    <script src="./mobile-nav.js"></script>
+    <script src="./app.js"></script>
     <script src="./animate.js"></script>
     <script src="./faq.js"></script>
+
   </body>
 </html>
